<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_feed"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/feed"
        android:title="@string/bottom_feed" />

    <item
        android:id="@+id/bottom_references"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ref"
        android:title="@string/bottom_references" />

    <item
        android:id="@+id/bottom_calendar"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/calendar"
        android:title="@string/bottom_calendar" />

    <item
        android:id="@+id/bottom_addCalendar"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="Add Calendar" />

    <item
        android:id="@+id/bottom_setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/setting"
        android:title="@string/bottom_setting" />
</menu>